--- a/Views/ChefNDishes/allChefs.cshtml
+++ b/Views/ChefNDishes/allChefs.cshtml
@@ -1,15 +1,42 @@
 
-@model List<Chef>
+@model chefInfoPackage
 
 <div class="container mt-5">
     <div class="text-center">
         <a href="allChefs" class="mt-3 btn btn-primary mr-5">Chefs</a>
-        <a href="allDishes" class="mt-3 btn btn-success m1-5">Chefs</a>
+        <a href="allDishes" class="mt-3 btn btn-success m1-5">Dishes</a>
     </div>
-    <a class="btn btn-info" data-toggle="modal" data-target="#addChef">Recruit a Chef</a>
+    <hr>
+    <div class="text-right mb-5">
+        <a class="btn btn-info" data-toggle="modal" data-target="#addChef">Recruit a Chef</a>
+    </div>
 
+    <h4 class="font-weight-light">Check out our roster of Chefs <i class="fab fa-pied-piper-hat"></i></h4>
+    <hr>
+    <div class="all_chef">
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Amount of Dishes</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach(var chef in Model.allChefs)
+                {
+                    <tr>
+                        <th scope="row">@chef.firstname @chef.lastname</th>
+                        <td>@chef.age</td>
+                        <td>@chef.dishes.Count</td>
+                    </tr>
+                }
+                
 
+            </tbody>
+        </table>
 
+    </div>
 
 
 <!-- Modal -->
@@ -18,18 +45,37 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addChef">Modal title</h5>
+                <h5 class="modal-title" id="addChef">Recruit a New Chef</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+            <form action="addChef" method="post">
+                <div class="modal-body font-weight-light">
+                    
+                        <div class="form-group">
+                            <label asp-for="chef.firstname"></label>
+                            <input asp-for="chef.firstname" class="form-control">
+                            <small><span asp-validation-for="chef.firstname" class="font-weight-bold text-danger"></span></small>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="chef.lastname"></label>
+                            <input asp-for="chef.lastname"class="form-control">
+                            <small><span asp-validation-for="chef.lastname" class="font-weight-bold text-danger"></span></small>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="chef.birthdate"></label>
+                            <input asp-for="chef.birthdate"class="form-control">
+                            <small><span asp-validation-for="chef.birthdate" class="font-weight-bold text-danger"></span></small>
+                        </div>
+
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary shadow">Recruit Chef</button>
+                </div>
+            </form>
             </div>
         </div>
     </div>
