--- a/Views/ChefNDishes/allDishes.cshtml
+++ b/Views/ChefNDishes/allDishes.cshtml
@@ -8,7 +8,7 @@
     </div>
     <hr>
     <div class="text-right mb-5">
-        <a class="btn btn-success" data-toggle="modal" data-target="#addDish">Add a Dish</a>
+        <a class="btn btn-success text-light" data-toggle="modal" data-target="#addDish">Add a Dish</a>
     </div>
 
     <h4 class="font-weight-light">Yum, take a look at out tasty dishes! <i class="fas fa-utensils"></i></h4>
